--- a/src/app/DemoPages/Components/pagination/pagination.component.html
+++ b/src/app/DemoPages/Components/pagination/pagination.component.html
@@ -1,75 +1,77 @@
-<app-page-title [heading]="heading" [subheading]="subheading" [icon]="icon"></app-page-title>
 
-<div class="row">
-  <div class="col-md-6">
-    <div class="card main-card mb-3">
-      <div class="card-header">
-        Basic
-      </div>
-      <div class="card-body">
-        <h6>
-          Default pagination:
-        </h6>
-        <ngb-pagination [collectionSize]="70" [(page)]="page" aria-label="Default pagination"></ngb-pagination>
-        <div class="divider"></div>
-        <h6>
-          No direction links:
-        </h6>
-        <ngb-pagination [collectionSize]="70" [(page)]="page" [directionLinks]="false"></ngb-pagination>
-        <div class="divider"></div>
-        <h6>
-          With boundary links:
-        </h6>
-        <ngb-pagination [collectionSize]="70" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
-        <div class="divider"></div>
-        <pre>Current page: {{page}}</pre>
-      </div>
-    </div>
-    <div class="card main-card mb-3">
-      <div class="card-header">
-        Advanced
-      </div>
-      <div class="card-body">
-        <ngb-pagination [collectionSize]="120" [(page)]="page2" [maxSize]="5" [boundaryLinks]="true"></ngb-pagination>
-        <ngb-pagination [collectionSize]="120" [(page)]="page2" [maxSize]="5" [rotate]="true"
-                        [boundaryLinks]="true"></ngb-pagination>
-        <ngb-pagination [collectionSize]="120" [(page)]="page2" [maxSize]="5" [rotate]="true" [ellipses]="false"
-                        [boundaryLinks]="true"></ngb-pagination>
-        <pre>Current page: {{page2}}</pre>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="card main-card mb-3">
-      <div class="card-header">
-        Sizing
-      </div>
-      <div class="card-body">
-        <ngb-pagination [collectionSize]="50" [(page)]="currentPage" size="lg"></ngb-pagination>
-        <ngb-pagination [collectionSize]="50" [(page)]="currentPage"></ngb-pagination>
-        <ngb-pagination [collectionSize]="50" [(page)]="currentPage" size="sm"></ngb-pagination>
-      </div>
-    </div>
-    <div class="card main-card mb-3">
-      <div class="card-header">
-        Alignments
-      </div>
-      <div class="card-body">
-        <ngb-pagination class="d-flex justify-content-start" [collectionSize]="70" [(page)]="page3"></ngb-pagination>
-        <ngb-pagination class="d-flex justify-content-center" [collectionSize]="70" [(page)]="page3"></ngb-pagination>
-        <ngb-pagination class="d-flex justify-content-end" [collectionSize]="70" [(page)]="page3"></ngb-pagination>
-      </div>
-    </div>
-    <div class="card main-card mb-3">
-      <div class="card-header">
-        Disabled
-      </div>
-      <div class="card-body">
-        <ngb-pagination [collectionSize]="70" [(page)]="page4" [disabled]='isDisabled'></ngb-pagination>
-        <button class="btn btn-sm btn-primary" (click)="toggleDisabled()">
-          Toggle disabled
-        </button>
-      </div>
-    </div>
-  </div>
+
+
+<div class="card-body">
+  <div id="table" class="table-editable">
+    <div class="table-responsive">
+
+<table class="table table-striped table-responsive-md btn-table">
+
+  <thead>
+    <tr>
+      <th></th>
+      <th *ngFor="let domaine of competence.UserDomaineList" class="text-center" [hidden]="!competence.DomaineList.length">
+        {{domaine.nomDomaine}}
+        <tr class="text-center" >
+          <th *ngFor="let label of competence.UserLabelList" [hidden]="domaine.domaineId!=label.domaineId " >
+
+             <span  class="text-center" >
+         {{label.nomLabel}}  </span> 
+         
+
+          </th>
+           
+         
+       
+         </tr>
+
+      </th>
+     
+    </tr>
+  </thead>
+
+ 
+     
+
+ 
+         
+
+         <tbody>
+          <tr *ngFor="let item of competence.user ">
+            <th scope="row"  > {{item.userName}} {{item.fullName}} 
+         
+            </th>
+      
+      
+            <td *ngFor="let domaine of competence.DomaineList" class="text-center" >
+            <tr  >
+           
+            <th >
+             
+              <tr class="text-center" >
+                <th  *ngFor="let label of competence.LabeList" [hidden]="domaine.domaineId!=label.domaineId " >
+                 
+                  <select class="form-control" style="width: 60px;"  >
+                    <option >
+                   1</option>
+                    <option >
+                      2</option>
+                      <option >
+                        3</option>
+                      </select>
+                   
+               
+                </th>
+                 
+               
+             
+               </tr>
+          </tr>
+              </td>
+      </tbody>
+ 
+
+</table>
+</div>
+</div>
 </div>
