--- a/src/app/DemoPages/UserPages/register-boxed/register-boxed.component.html
+++ b/src/app/DemoPages/UserPages/register-boxed/register-boxed.component.html
@@ -162,8 +162,8 @@ a{
 }
 
 /* remove codrops styles and reset the whole thing */
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-body{background:url(https://lh3.googleusercontent.com/proxy/jEibMBcH62zBNZJF31F7tms5RJi-eUflmGmy4z8NuiL8QR3DBrM3mOJPajCaVzd3m2sLA-xpXY-MD8IY5MGRRERrUInIQsIOoiQIjYa-WA37amHKHQpzM4DheK5vGrLJElBACEb1IJWbVckmBfpt2I2GAMU);
+@import  url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+body{background:url(https://www.cersa.org/wp-content/uploads/2019/02/formation-inter-intra-entreprise-1050x525.jpg);
 background-attachment:fixed;
 background-size:cover;
 }
