--- a/src/app/DemoPages/Components/pagination/pagination.component.html
+++ b/src/app/DemoPages/Components/pagination/pagination.component.html
@@ -10,10 +10,11 @@
   <thead>
     <tr>
       <th></th>
-      <th *ngFor="let domaine of competence.UserDomaineList" class="text-center" [hidden]="!competence.DomaineList.length">
-        {{domaine.nomDomaine}}
+      <th *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
+       {{domaine.nomDomaine}}
+     
         <tr class="text-center" >
-          <th *ngFor="let label of competence.UserLabelList" [hidden]="domaine.domaineId!=label.domaineId " >
+          <th *ngFor="let label of competence.UserLabelList"  [hidden]="domaine.domaineId!=label.domaineId ">
 
              <span  class="text-center" >
          {{label.nomLabel}}  </span> 
@@ -34,31 +35,39 @@
      
 
  
-         
+         <!--item.userName {{item.fullName}}-->
 
          <tbody>
-          <tr *ngFor="let item of competence.user ">
-            <th scope="row"  > {{item.userName}} {{item.fullName}} 
+          <tr *ngIf = "competence.user">
+            <th scope="row"  >  {{competence.user.userName}} {{competence.user.fullName}}
          
             </th>
       
       
-            <td *ngFor="let domaine of competence.DomaineList" class="text-center" >
+            <td *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
             <tr  >
            
             <th >
              
               <tr class="text-center" >
-                <th  *ngFor="let label of competence.LabeList" [hidden]="domaine.domaineId!=label.domaineId " >
-                 
-                  <select class="form-control" style="width: 60px;"  >
-                    <option >
-                   1</option>
-                    <option >
-                      2</option>
-                      <option >
-                        3</option>
-                      </select>
+                <th  *ngFor="let label of competence.UserLabelList" [hidden]="domaine.domaineId!=label.domaineId " >
+              <!--    {{competence.List.indexOf(label.labelId)}}-->
+                  <select class="form-control" style="width: 60px;" >
+                    <option *ngFor="let item of competence.List, let i = index" [selected]="item.labelId==label.labelId" >
+                         {{i}}
+                    </option>
+                    <option  >
+                     3
+                 </option>
+                 <option  >
+                  4
+              </option>
+                      
+                  
+                  
+                  
+                    </select>
+                     
                    
                
                 </th>
@@ -68,6 +77,7 @@
                </tr>
           </tr>
               </td>
+              </tr>
       </tbody>
  
 
