--- a/src/app/Layout/Components/sidebar/sidebar.component.html
+++ b/src/app/Layout/Components/sidebar/sidebar.component.html
@@ -165,15 +165,7 @@
                         <a routerLinkActive="active-item" routerLink="/components/progress-bar" class="vsm-link"> <span
                           class="vsm-title">évaluation à froid (chef)</span></a>
                       </div>
-                      <!--<div class="vsm-item">
-                        <a routerLinkActive="active-item" routerLink="/components/tooltips-popovers"
-                           class="vsm-link"> <span
-                          class="vsm-title">Tooltips &amp; Popovers</span></a>
-                      </div>-->
-                     <!-- <div class="vsm-item">
-                        <a routerLinkActive="active-item" routerLink="/components/carousel" class="vsm-link"> <span
-                          class="vsm-title">Carousel</span></a>
-                      </div>-->
+                  
                       <!--<div class="vsm-item">
                         <a routerLinkActive="active-item" routerLink="/components/pagination" class="vsm-link"> <span
                           class="vsm-title">Pagination</span></a>
@@ -246,19 +238,14 @@
                 <ng-template ngbPanelContent>
                   <div class="vsm-dropdown">
                     <div class="vsm-list">
-                      <div class="vsm-item">
-                        <a routerLinkActive="active-item" routerLink="/tables/bootstrap" class="vsm-link"> <span
-                          class="vsm-title">Add Former</span></a> --><!--Bootstrap 4 Tables-->
-                    <!--  </div>
+                      -->
+                    <!--  
                     </div>
                   </div>
 
                   <div class="vsm-dropdown">
                     <div class="vsm-list">
-                      <div class="vsm-item">
-                        <a routerLinkActive="active-item" routerLink="/tables/bootstrap" class="vsm-link"> <span
-                          class="vsm-title">Liste of Former</span></a>
-                      </div>
+                   
                     </div>
                   </div>
                 </ng-template>
@@ -336,6 +323,18 @@
                         <a routerLinkActive="active-item" routerLink="/widgets/chart-boxes-3" class="vsm-link">
                           <span class="vsm-title">Liste de compétences</span></a>
                       </div>
+
+                   <div class="vsm-item">
+                        <a routerLinkActive="active-item" routerLink="/components/tooltips-popovers"
+                           class="vsm-link"> <span
+                          class="vsm-title">Compétence Participant </span></a>
+                      </div>
+                    
+                   <div class="vsm-item">
+                        <a routerLinkActive="active-item" routerLink="/components/carousel" class="vsm-link"> <span
+                          class="vsm-title">Matrice competence de DA</span></a>
+                      </div>
+
                     </div>
                   </div>
                 </ng-template>
