--- a/src/app/DemoPages/Components/carousel/carousel.component.html
+++ b/src/app/DemoPages/Components/carousel/carousel.component.html
@@ -1,34 +1,88 @@
-<app-page-title [heading]="heading" [subheading]="subheading" [icon]="icon"></app-page-title>
-<div class="col-md-8 mx-auto">
-  <div class="card">
-    <div class="card-header">
-      Basic
-    </div>
-    <div class="card-body">
-      <ngb-carousel *ngIf="images">
-        <ng-template ngbSlide>
-          <img [src]="images[0]" width="100%" alt="Random first slide">
-          <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <img [src]="images[1]" width="100%" alt="Random second slide">
-          <div class="carousel-caption">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <img [src]="images[2]" width="100%" alt="Random third slide">
-          <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </ng-template>
-      </ngb-carousel>
 
-    </div>
+
+
+
+<div class="card-body">
+    <div id="table" class="table-editable">
+      <div class="table-responsive">
+  
+  <table class="table table-striped table-responsive-md btn-table">
+  
+    <thead>
+      <tr>
+        <th></th>
+        <th *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
+         {{domaine.nomDomaine}}
+       
+          <tr class="text-center" >
+            <th *ngFor="let label of competence.UserLabelList"  [hidden]="domaine.domaineId!=label.domaineId ">
+  
+               <span  class="text-center" >
+           {{label.nomLabel}}  </span> 
+           
+  
+            </th>
+             
+           
+         
+           </tr>
+  
+        </th>
+       
+      </tr>
+    </thead>
+  
+   
+       
+  
+   
+           <!--item.userName {{item.fullName}}-->
+  
+           <tbody>
+            <tr *ngFor="let item of competence.user" >
+              <th scope="row" *ngIf = "competence.user" >  {{item.userName}} {{item.fullName}}
+           
+              </th>
+        
+        
+              <td *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
+              <tr  >
+             
+              <th >
+               
+                <tr class="text-center" >
+                  <th  *ngFor="let label of competence.UserLabelList" [hidden]="domaine.domaineId!=label.domaineId " >
+                <!--    {{competence.List.indexOf(label.labelId)}}-->
+                    <select class="form-control" style="width: 60px;" >
+                      <option *ngFor="let item of competence.List, let i = index" [selected]="item.labelId==label.labelId" >
+                           {{i}}
+                      </option>
+                      <option  >
+                       3
+                   </option>
+                   <option  >
+                    4
+                </option>
+                        
+                    
+                    
+                    
+                      </select>
+                       
+                     
+                 
+                  </th>
+                   
+                 
+               
+                 </tr>
+            </tr>
+                </td>
+                </tr>
+        </tbody>
+   
+  
+  </table>
   </div>
-</div>
+  </div>
+  </div>
