--- a/src/app/DemoPages/Components/tooltips-popovers/tooltips-popovers.component.html
+++ b/src/app/DemoPages/Components/tooltips-popovers/tooltips-popovers.component.html
@@ -1,21 +1,87 @@
-<app-page-title [heading]="heading" [subheading]="subheading" [icon]="icon"></app-page-title>
 
-<div class="main-card mb-3 card">
-  <div class="card-body"><h5 class="card-title">Tooltips</h5>
-    <div class="text-center">
-      <button id="exButton1" type="button" class="btn mr-2 btn-primary" placement="top" ngbTooltip="Tooltip on top">
-        Tooltip on top
-      </button>
-      <button id="exButton2" type="button" class="btn mr-2 btn-primary" placement="right" ngbTooltip="Tooltip on right">
-        Tooltip on right
-      </button>
-      <button id="exButton3" type="button" class="btn mr-2 btn-primary" placement="bottom"
-              ngbTooltip="Tooltip on bottom">
-        Tooltip on bottom
-      </button>
-      <button id="exButton4" type="button" class="btn btn-primary" placement="left" ngbTooltip="Tooltip on left">
-        Tooltip on left
-      </button>
-    </div>
-  </div>
+
+
+<div class="card-body">
+  <div id="table" class="table-editable">
+    <div class="table-responsive">
+
+<table class="table table-striped table-responsive-md btn-table">
+
+  <thead>
+    <tr>
+      <th></th>
+      <th *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
+       {{domaine.nomDomaine}}
+     
+        <tr class="text-center" >
+          <th *ngFor="let label of competence.UserLabelList"  [hidden]="domaine.domaineId!=label.domaineId ">
+
+             <span  class="text-center" >
+         {{label.nomLabel}}  </span> 
+         
+
+          </th>
+           
+         
+       
+         </tr>
+
+      </th>
+     
+    </tr>
+  </thead>
+
+ 
+     
+
+ 
+         <!--item.userName {{item.fullName}}-->
+
+         <tbody>
+          <tr *ngIf = "competence.user">
+            <th scope="row"  >  {{competence.user.userName}} {{competence.user.fullName}}
+         
+            </th>
+      
+      
+            <td *ngFor="let domaine of competence.UserDomaineList" class="text-center" >
+            <tr  >
+           
+            <th >
+             
+              <tr class="text-center" >
+                <th  *ngFor="let label of competence.UserLabelList" [hidden]="domaine.domaineId!=label.domaineId " >
+              <!--    {{competence.List.indexOf(label.labelId)}}-->
+                  <select class="form-control" style="width: 60px;" >
+                    <option *ngFor="let item of competence.List, let i = index" [selected]="item.labelId==label.labelId" >
+                         {{i}}
+                    </option>
+                    <option  >
+                     3
+                 </option>
+                 <option  >
+                  4
+              </option>
+                      
+                  
+                  
+                  
+                    </select>
+                     
+                   
+               
+                </th>
+                 
+               
+             
+               </tr>
+          </tr>
+              </td>
+              </tr>
+      </tbody>
+ 
+
+</table>
+</div>
+</div>
 </div>
