--- a/src/app/DemoPages/Elements/need-training/dropdowns.component.html
+++ b/src/app/DemoPages/Elements/need-training/dropdowns.component.html
@@ -21,19 +21,14 @@
   
 
       <div class="card-body">
-        <form class="form" role="form" class="mb-4" autocomplete="off">
+        <form [formGroup]="formation.Activite"  class="form" role="form" class="mb-4" autocomplete="off" (submit)="AjouterActicite()">
           <div class="form-group row">
-            <label class="col-lg-3 col-form-label form-control-label" >Nom</label>
+            <label class="col-lg-3 col-form-label form-control-label" >Activité</label>
             <div class="col-lg-9">
-              <input class="form-control" type="text">
+              <input class="form-control" type="text" formControlName="activite" name="activite">
             </div>
           </div>
-          <div class="form-group row">
-            <label class="col-lg-3 col-form-label form-control-label" >Prenom</label>
-            <div class="col-lg-9">
-              <input class="form-control" type="text" >
-            </div>
-          </div>
+          
         </form>
       </div>
   
@@ -80,8 +75,8 @@
          <div class="position-relative form-group">
             <input  list="StaticUserIds" formControlName="Activite" name="Activite" style="width: 200px;" class="form-control" >
             <datalist id="StaticUserIds">
-            <option *ngFor="let item of formation.BesFormation " >
-                {{item.activite}}
+            <option *ngFor="let item of formation.BesFormation, let i = index" >
+                {{formation.tabLab[i]}}
 
 
                 <!--  <input type="checkbox"  (change)="PrioriteChange($event)"> -->
@@ -118,7 +113,7 @@
             <input type="text" list="staticUserIds" name="select" class="form-control" formControlName="Justification_du_besoin"
               name="Justification_du_besoin"  style="width: 200px;" />
               <datalist id="staticUserIds">
-                <option *ngFor="let participant of formation.besoins" >{{participant.justification_du_besoin}} </option> 
+                <option *ngFor="let participant of formation.besoins , let i = index" >{{formation.JustificationBesoin[i]}} </option> 
              
             </datalist>
             </div>
