--- a/src/app/Layout/Components/footer/footer.component.html
+++ b/src/app/Layout/Components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="app-footer">
   <div class="app-footer__inner">
     <div class="app-footer-left">
-      <span class="pl-2">Copyright 2019 - DashboardPack.com</span>
+      <span class="pl-2"></span> <!--Copyright 2019 - DashboardPack.com-->
     </div>
     <div class="app-footer-right">
       <!-- <a class="btn btn-sm btn-primary mr-2" href="https://dashboardpack.com">Homepage</a> -->
