--- a/src/app/Layout/Components/header/elements/user-box/user-box.component.html
+++ b/src/app/Layout/Components/header/elements/user-box/user-box.component.html
@@ -11,16 +11,6 @@
         <div class="widget-content-left">
 
 
-
-
-
-
-
-
-
-
-
-
           <div class="btn-group" ngbDropdown placement="bottom-right">
           
             <button type="button" class="btn btn-link p-0 mr-2" ngbDropdownToggle >
@@ -28,7 +18,7 @@
               <span>
                 <div class="icon-wrapper icon-wrapper-alt rounded-circle" >
                 <label><strong  style="color: red;">{{sum}}</strong></label>
-                <img width="30" src="./assets/images/avatars/notif.jpg" alt="3" class="rounded-circle">
+                <i class="fa fa-bell" aria-hidden="true"></i>
                 </div>
               
               </span>
@@ -97,7 +87,7 @@
               <span>
                 <div class="icon-wrapper icon-wrapper-alt rounded-circle">
                 
-                  <img width="42" src="./assets/images/avatars/1.jpg" alt="3" class="rounded-circle">
+                  <img width="42" src="./assets/images/avatars/10.jpg" alt="3" class="rounded-circle">
                 </div>
               
               </span>
