--- a/src/app/Layout/Components/sidebar/sidebar.component.html
+++ b/src/app/Layout/Components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
           <button ngbPanelToggle class="vsm-link">
           
             <span class="vsm-title">
-             <strong style="font-size:18px;" >Chayma Ben Zouitine</strong> </span>
+             <strong style="font-size:18px;" >{{competence.user.userName}} {{competence.user.fullName}}</strong> </span>
             
             <i class="vsm-arrow"></i>
           </button>
